a bug in Row 363 to damage the file

--- a/tutorial-contents-notebooks/201_torch_numpy.ipynb
+++ b/tutorial-contents-notebooks/201_torch_numpy.ipynb
@@ -361,8 +361,7 @@
     }
    ],
    "source": [
-    "torch.dot(torch.Tensor([2, 3]), torch.Tensor([2, 1]))
-7.0"
+    "torch.dot(torch.Tensor([2, 3]), torch.Tensor([2, 1]))"
    ]
   },
   {
