--- a/tutorial-contents-notebooks/301_regression.ipynb
+++ b/tutorial-contents-notebooks/301_regression.ipynb
@@ -261,9 +261,9 @@
     "        plt.cla()\n",
     "        plt.scatter(x.data.numpy(), y.data.numpy())\n",
     "        plt.plot(x.data.numpy(), prediction.data.numpy(), 'r-', lw=5)\n",
-    "        plt.text(0.5, 0, 'Loss=%.4f' % loss.item(), fontdict={'size': 20, 'color':  'red'})\n",
+    "        plt.text(0.5, 0, 'Loss=%.4f' % loss.data.numpy(), fontdict={'size': 20, 'color':  'red'})\n",
     "        plt.show()\n",
-    "        plt.pause(0.2)\n",
+    "        plt.pause(0.1)\n",
     "\n",
     "plt.ioff()\n"
    ]
