added virtualenv and requirements.txt

--- a/tutorial-contents-notebooks/201_torch_numpy.ipynb
+++ b/tutorial-contents-notebooks/201_torch_numpy.ipynb
@@ -1,29 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# 201 Torch and Numpy\n",
-    "\n",
+    "\"\"\"\n",
     "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
     "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
     "\n",
     "Dependencies:\n",
-    "* torch: 0.1.11\n",
-    "* numpy\n",
-    "\n",
-    "Details about math operation in torch can be found in: http://pytorch.org/docs/torch.html#math-operations\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "torch: 0.1.11\n",
+    "numpy\n",
+    "\"\"\"\n",
     "import torch\n",
     "import numpy as np"
    ]
@@ -37,26 +27,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "numpy array: [[0 1 2]\n",
       " [3 4 5]] \n",
-      "torch tensor: \n",
-      " 0  1  2\n",
-      " 3  4  5\n",
-      "[torch.LongTensor of size 2x3]\n",
-      " \n",
+      "torch tensor: tensor([[0, 1, 2],\n",
+      "        [3, 4, 5]]) \n",
       "tensor to array: [[0 1 2]\n",
       " [3 4 5]]\n"
      ]
     }
    ],
    "source": [
+    "# details about math operation in torch can be found in: http://pytorch.org/docs/torch.html#math-operations\n",
+    "\n",
     "# convert numpy to tensor or vise versa\n",
     "np_data = np.arange(6).reshape((2, 3))\n",
     "torch_data = torch.from_numpy(np_data)\n",
     "tensor2array = torch_data.numpy()\n",
     "print(\n",
-    "    '\\nnumpy array:', np_data,          # [[0 1 2], [3 4 5]]\n",
+    "    'numpy array:', np_data,          # [[0 1 2], [3 4 5]]\n",
     "    '\\ntorch tensor:', torch_data,      #  0  1  2 \\n 3  4  5    [torch.LongTensor of size 2x3]\n",
     "    '\\ntensor to array:', tensor2array, # [[0 1 2], [3 4 5]]\n",
     ")"
@@ -74,13 +62,7 @@
       "\n",
       "abs \n",
       "numpy:  [1 2 1 2] \n",
-      "torch:  \n",
-      " 1\n",
-      " 2\n",
-      " 1\n",
-      " 2\n",
-      "[torch.FloatTensor of size 4]\n",
-      "\n"
+      "torch:  tensor([1., 2., 1., 2.])\n"
      ]
     }
    ],
@@ -101,44 +83,13 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\n",
-       " 1\n",
-       " 2\n",
-       " 1\n",
-       " 2\n",
-       "[torch.FloatTensor of size 4]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tensor.abs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "sin \n",
       "numpy:  [-0.84147098 -0.90929743  0.84147098  0.90929743] \n",
-      "torch:  \n",
-      "-0.8415\n",
-      "-0.9093\n",
-      " 0.8415\n",
-      " 0.9093\n",
-      "[torch.FloatTensor of size 4]\n",
-      "\n"
+      "torch:  tensor([-0.8415, -0.9093,  0.8415,  0.9093])\n"
      ]
     }
    ],
@@ -153,57 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       " 0.2689\n",
-       " 0.1192\n",
-       " 0.7311\n",
-       " 0.8808\n",
-       "[torch.FloatTensor of size 4]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tensor.sigmoid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       " 0.3679\n",
-       " 0.1353\n",
-       " 2.7183\n",
-       " 7.3891\n",
-       "[torch.FloatTensor of size 4]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tensor.exp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +114,7 @@
       "\n",
       "mean \n",
       "numpy:  0.0 \n",
-      "torch:  0.0\n"
+      "torch:  tensor(0.)\n"
      ]
     }
    ],
@@ -228,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,11 +140,19 @@
       "matrix multiplication (matmul) \n",
       "numpy:  [[ 7 10]\n",
       " [15 22]] \n",
-      "torch:  \n",
-      "  7  10\n",
-      " 15  22\n",
-      "[torch.FloatTensor of size 2x2]\n",
-      "\n"
+      "torch:  tensor([[ 7., 10.],\n",
+      "        [15., 22.]])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "dot: Expected 1-D argument self, but got 2-D",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-ff47385c9f51>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;34m'\\nmatrix multiplication (dot)'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;34m'\\nnumpy: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m        \u001b[0;31m# [[7, 10], [15, 22]]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;34m'\\ntorch: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m)\u001b[0m     \u001b[0;31m# this will convert tensor to [1,2,3,4], you'll get 30.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m )\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: dot: Expected 1-D argument self, but got 2-D"
      ]
     }
    ],
@@ -251,128 +160,21 @@
     "# matrix multiplication\n",
     "data = [[1,2], [3,4]]\n",
     "tensor = torch.FloatTensor(data)  # 32-bit floating point\n",
+    "\n",
     "# correct method\n",
     "print(\n",
     "    '\\nmatrix multiplication (matmul)',\n",
     "    '\\nnumpy: ', np.matmul(data, data),     # [[7, 10], [15, 22]]\n",
     "    '\\ntorch: ', torch.mm(tensor, tensor)   # [[7, 10], [15, 22]]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "matrix multiplication (dot) \n",
-      "numpy:  [[ 7 10]\n",
-      " [15 22]] \n",
-      "torch:  30.0\n"
-     ]
-    }
-   ],
-   "source": [
+    ")\n",
     "# incorrect method\n",
     "data = np.array(data)\n",
-    "tensor = torch.Tensor([1,2,3,4]\n",
     "print(\n",
     "    '\\nmatrix multiplication (dot)',\n",
     "    '\\nnumpy: ', data.dot(data),        # [[7, 10], [15, 22]]\n",
-    "    '\\ntorch: ', torch.dot(tensor.dot(tensor)     # 30.0. Beware that torch.dot does not broadcast, only works for 1-dimensional tensor\n",
+    "    '\\ntorch: ', tensor.dot(tensor)     # this will convert tensor to [1,2,3,4], you'll get 30.0\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that:\n",
-    "\n",
-    "torch.dot(tensor1, tensor2) → float\n",
-    "\n",
-    "Computes the dot product (inner product) of two tensors. Both tensors are treated as 1-D vectors."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "  7  10\n",
-       " 15  22\n",
-       "[torch.FloatTensor of size 2x2]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tensor.mm(tensor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "  1   4\n",
-       "  9  16\n",
-       "[torch.FloatTensor of size 2x2]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tensor * tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30.0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.dot(torch.Tensor([2, 3]), torch.Tensor([2, 1]))
-7.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -391,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
