--- a/tutorial-contents-notebooks/202_variable.ipynb
+++ b/tutorial-contents-notebooks/202_variable.ipynb
@@ -9,9 +9,6 @@
     "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
     "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
     "\n",
-    "Dependencies:\n",
-    "* torch: 0.1.11\n",
-    "\n",
     "Variable in torch is to build a computational graph,\n",
     "but this graph is dynamic compared with a static graph in Tensorflow or Theano.\n",
     "So torch does not have placeholder, torch can just pass variable to the computational graph.\n"
@@ -20,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -38,16 +33,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      " 1  2\n",
-      " 3  4\n",
-      "[torch.FloatTensor of size 2x2]\n",
-      "\n",
-      "Variable containing:\n",
-      " 1  2\n",
-      " 3  4\n",
-      "[torch.FloatTensor of size 2x2]\n",
-      "\n"
+      "tensor([[1., 2.],\n",
+      "        [3., 4.]])\n",
+      "tensor([[1., 2.],\n",
+      "        [3., 4.]], requires_grad=True)\n"
      ]
     }
    ],
@@ -77,11 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.5\n",
-      "Variable containing:\n",
-      " 7.5000\n",
-      "[torch.FloatTensor of size 1]\n",
-      "\n"
+      "tensor(7.5000)\n",
+      "tensor(7.5000, grad_fn=<MeanBackward1>)\n"
      ]
     }
    ],
@@ -95,9 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "v_out.backward()    # backpropagation from v_out"
@@ -124,10 +108,8 @@
     {
      "data": {
       "text/plain": [
-       "Variable containing:\n",
-       " 0.5000  1.0000\n",
-       " 1.5000  2.0000\n",
-       "[torch.FloatTensor of size 2x2]"
+       "tensor([[0.5000, 1.0000],\n",
+       "        [1.5000, 2.0000]])"
       ]
      },
      "execution_count": 5,
@@ -147,10 +129,8 @@
     {
      "data": {
       "text/plain": [
-       "Variable containing:\n",
-       " 1  2\n",
-       " 3  4\n",
-       "[torch.FloatTensor of size 2x2]"
+       "tensor([[1., 2.],\n",
+       "        [3., 4.]], requires_grad=True)"
       ]
      },
      "execution_count": 6,
@@ -170,10 +150,8 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1  2\n",
-       " 3  4\n",
-       "[torch.FloatTensor of size 2x2]"
+       "tensor([[1., 2.],\n",
+       "        [3., 4.]])"
       ]
      },
      "execution_count": 7,
@@ -193,8 +171,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.,  2.],\n",
-       "       [ 3.,  4.]], dtype=float32)"
+       "array([[1., 2.],\n",
+       "       [3., 4.]], dtype=float32)"
       ]
      },
      "execution_count": 8,
@@ -227,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.autograd.variable.Variable"
+       "torch.Tensor"
       ]
      },
      "execution_count": 9,
@@ -247,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.FloatTensor"
+       "torch.Tensor"
       ]
      },
      "execution_count": 10,
@@ -258,15 +236,6 @@
    "source": [
     "type(v_out.data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -285,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
