finished 3xx notebooks

--- a/tutorial-contents-notebooks/303_build_nn_quickly.ipynb
+++ b/tutorial-contents-notebooks/303_build_nn_quickly.ipynb
@@ -7,18 +7,13 @@
     "# 303 Build NN Quickly\n",
     "\n",
     "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
-    "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
-    "\n",
-    "Dependencies:\n",
-    "* torch: 0.1.11"
+    "My Youtube Channel: https://www.youtube.com/user/MorvanZhou"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -28,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# replace following class code with an easy sequential network\n",
@@ -49,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "net1 = Net(1, 10, 1)"
@@ -60,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# easy and fast way to build your network\n",
@@ -82,14 +71,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Net (\n",
-      "  (hidden): Linear (1 -> 10)\n",
-      "  (predict): Linear (10 -> 1)\n",
+      "Net(\n",
+      "  (hidden): Linear(in_features=1, out_features=10, bias=True)\n",
+      "  (predict): Linear(in_features=10, out_features=1, bias=True)\n",
       ")\n",
-      "Sequential (\n",
-      "  (0): Linear (1 -> 10)\n",
-      "  (1): ReLU ()\n",
-      "  (2): Linear (10 -> 1)\n",
+      "Sequential(\n",
+      "  (0): Linear(in_features=1, out_features=10, bias=True)\n",
+      "  (1): ReLU()\n",
+      "  (2): Linear(in_features=10, out_features=1, bias=True)\n",
       ")\n"
      ]
     }
@@ -125,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
