--- a/tutorial-contents-notebooks/305_batch_train.ipynb
+++ b/tutorial-contents-notebooks/305_batch_train.ipynb
@@ -9,22 +9,25 @@
     "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
     "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
     "\n",
-    "Dependencies:\n",
-    "* torch: 0.1.11"
+    "https://www.quora.com/What-is-an-epoch-in-deep-learning\n",
+    "\n",
+    "- 1 Epoch = 1 Forward pass + 1 Backward pass for ALL training samples.\n",
+    "- Batch Size = Number of training samples in 1 Forward/1 Backward pass. (With increase in Batch size, required memory space increases.)\n",
+    "- Number of iterations = Number of passes i.e. 1 Pass = 1 Forward pass + 1 Backward pass (Forward pass and Backward pass are not counted differently.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7faffc159918>"
+       "<torch._C.Generator at 0x10805b1b0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,10 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 5\n",
@@ -50,25 +51,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.]) tensor([10.,  9.,  8.,  7.,  6.,  5.,  4.,  3.,  2.,  1.])\n"
+     ]
+    }
+   ],
    "source": [
+    "# torch.linspace(start, end, step): returns a one-dimensional tensor of steps equally spaced points between start and end.\n",
     "x = torch.linspace(1, 10, 10)       # this is x data (torch tensor)\n",
-    "y = torch.linspace(10, 1, 10)       # this is y data (torch tensor)\n"
+    "y = torch.linspace(10, 1, 10)       # this is y data (torch tensor)\n",
+    "print (x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "torch_dataset = Data.TensorDataset(data_tensor=x, target_tensor=y)\n",
+    "torch_dataset = Data.TensorDataset(x, y)\n",
     "loader = Data.DataLoader(\n",
     "    dataset=torch_dataset,      # torch TensorDataset format\n",
     "    batch_size=BATCH_SIZE,      # mini batch size\n",
@@ -79,19 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:  0 | Step:  0 | batch x:  [ 6.  7.  2.  3.  1.] | batch y:  [  5.   4.   9.   8.  10.]\n",
-      "Epoch:  0 | Step:  1 | batch x:  [  9.  10.   4.   8.   5.] | batch y:  [ 2.  1.  7.  3.  6.]\n",
-      "Epoch:  1 | Step:  0 | batch x:  [  3.   4.   2.   9.  10.] | batch y:  [ 8.  7.  9.  2.  1.]\n",
-      "Epoch:  1 | Step:  1 | batch x:  [ 1.  7.  8.  5.  6.] | batch y:  [ 10.   4.   3.   6.   5.]\n",
-      "Epoch:  2 | Step:  0 | batch x:  [ 3.  9.  2.  6.  7.] | batch y:  [ 8.  2.  9.  5.  4.]\n",
-      "Epoch:  2 | Step:  1 | batch x:  [ 10.   4.   8.   1.   5.] | batch y:  [  1.   7.   3.  10.   6.]\n"
+      "Epoch:  0 | Step:  0 | batch x:  [ 5.  7. 10.  3.  4.] | batch y:  [6. 4. 1. 8. 7.]\n",
+      "Epoch:  0 | Step:  1 | batch x:  [2. 1. 8. 9. 6.] | batch y:  [ 9. 10.  3.  2.  5.]\n",
+      "Epoch:  1 | Step:  0 | batch x:  [ 4.  6.  7. 10.  8.] | batch y:  [7. 5. 4. 1. 3.]\n",
+      "Epoch:  1 | Step:  1 | batch x:  [5. 3. 2. 1. 9.] | batch y:  [ 6.  8.  9. 10.  2.]\n",
+      "Epoch:  2 | Step:  0 | batch x:  [ 4.  2.  5.  6. 10.] | batch y:  [7. 9. 6. 5. 1.]\n",
+      "Epoch:  2 | Step:  1 | batch x:  [3. 9. 1. 8. 7.] | batch y:  [ 8.  2. 10.  3.  4.]\n"
      ]
     }
    ],
@@ -112,24 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:  0 | Step:  0 | batch x:  [  3.  10.   9.   4.   7.   8.   2.   1.] | batch y:  [  8.   1.   2.   7.   4.   3.   9.  10.]\n",
-      "Epoch:  0 | Step:  1 | batch x:  [ 5.  6.] | batch y:  [ 6.  5.]\n",
-      "Epoch:  1 | Step:  0 | batch x:  [  4.   8.   3.   2.   1.  10.   5.   6.] | batch y:  [  7.   3.   8.   9.  10.   1.   6.   5.]\n",
-      "Epoch:  1 | Step:  1 | batch x:  [ 7.  9.] | batch y:  [ 4.  2.]\n",
-      "Epoch:  2 | Step:  0 | batch x:  [  6.   2.   4.  10.   9.   3.   8.   5.] | batch y:  [ 5.  9.  7.  1.  2.  8.  3.  6.]\n",
-      "Epoch:  2 | Step:  1 | batch x:  [ 7.  1.] | batch y:  [  4.  10.]\n"
+      "Epoch:  0 | Step:  0 | batch x:  [3. 9. 4.] | batch y:  [8. 2. 7.]\n",
+      "Epoch:  0 | Step:  1 | batch x:  [1. 7. 8.] | batch y:  [10.  4.  3.]\n",
+      "Epoch:  0 | Step:  2 | batch x:  [ 5.  6. 10.] | batch y:  [6. 5. 1.]\n",
+      "Epoch:  0 | Step:  3 | batch x:  [2.] | batch y:  [9.]\n",
+      "Epoch:  1 | Step:  0 | batch x:  [1. 5. 3.] | batch y:  [10.  6.  8.]\n",
+      "Epoch:  1 | Step:  1 | batch x:  [2. 8. 6.] | batch y:  [9. 3. 5.]\n",
+      "Epoch:  1 | Step:  2 | batch x:  [ 9.  7. 10.] | batch y:  [2. 4. 1.]\n",
+      "Epoch:  1 | Step:  3 | batch x:  [4.] | batch y:  [7.]\n",
+      "Epoch:  2 | Step:  0 | batch x:  [1. 6. 4.] | batch y:  [10.  5.  7.]\n",
+      "Epoch:  2 | Step:  1 | batch x:  [3. 8. 5.] | batch y:  [8. 3. 6.]\n",
+      "Epoch:  2 | Step:  2 | batch x:  [10.  7.  9.] | batch y:  [1. 4. 2.]\n",
+      "Epoch:  2 | Step:  3 | batch x:  [2.] | batch y:  [9.]\n"
      ]
     }
    ],
    "source": [
-    "BATCH_SIZE = 8\n",
+    "BATCH_SIZE = 3\n",
     "loader = Data.DataLoader(\n",
     "    dataset=torch_dataset,      # torch TensorDataset format\n",
     "    batch_size=BATCH_SIZE,      # mini batch size\n",
@@ -169,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
