--- a/tutorial-contents-notebooks/405_DQN_Reinforcement_learning.ipynb
+++ b/tutorial-contents-notebooks/405_DQN_Reinforcement_learning.ipynb
@@ -7,21 +7,16 @@
     "# 405 DQN Reinforcement Learning\n",
     "\n",
     "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
-    "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
-    "More about Reinforcement learning: https://morvanzhou.github.io/tutorials/machine-learning/reinforcement-learning/\n",
     "\n",
-    "Dependencies:\n",
-    "* torch: 0.1.11\n",
-    "* gym: 0.8.1\n",
-    "* numpy"
+    "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
+    "\n",
+    "More about Reinforcement learning: https://morvanzhou.github.io/tutorials/machine-learning/reinforcement-learning/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -34,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-06-20 22:23:40,418] Making new env: CartPole-v0\n"
+      "\u001b[33mWARN: gym.spaces.Box autodetected dtype as <class 'numpy.float32'>. Please provide explicit dtype.\u001b[0m\n"
      ]
     }
    ],
@@ -61,10 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
@@ -84,10 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DQN(object):\n",
@@ -144,10 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dqn = DQN()"
@@ -425,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
