tensor y don't need autograd
如果y有grad 后面的神经网络模型不会收敛

--- a/tutorial-contents-notebooks/301_regression.ipynb
+++ b/tutorial-contents-notebooks/301_regression.ipynb
@@ -70,7 +70,7 @@
     "y = x.pow(2) + 0.2*torch.rand(x.size())                 # noisy y data (tensor), shape=(100, 1)\n",
     "\n",
     "# torch can only train on Variable, so convert them to Variable\n",
-    "x, y = Variable(x), Variable(y)\n",
+    "x = Variable(x) \n",
     "\n",
     "plt.scatter(x.data.numpy(), y.data.numpy())\n",
     "plt.show()"
