--- a/tutorial-contents-notebooks/304_save_reload.ipynb
+++ b/tutorial-contents-notebooks/304_save_reload.ipynb
@@ -7,7 +7,7 @@
     "# 304 Save and Reload\n",
     "\n",
     "\"\"\"\n",
-    "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
+    "View more, visit my tutorial page: https://mofanpy.com/tutorials/\n",
     "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
     "\n",
     "Dependencies:\n",
