--- a/tutorial-contents-notebooks/405_DQN_Reinforcement_learning.ipynb
+++ b/tutorial-contents-notebooks/405_DQN_Reinforcement_learning.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# 405 DQN Reinforcement Learning\n",
     "\n",
-    "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
+    "View more, visit my tutorial page: https://mofanpy.com/tutorials/\n",
     "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
-    "More about Reinforcement learning: https://morvanzhou.github.io/tutorials/machine-learning/reinforcement-learning/\n",
+    "More about Reinforcement learning: https://mofanpy.com/tutorials/machine-learning/reinforcement-learning/\n",
     "\n",
     "Dependencies:\n",
     "* torch: 0.1.11\n",
