--- a/tutorial-contents-notebooks/203_activation.ipynb
+++ b/tutorial-contents-notebooks/203_activation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 203 Activation\n",
     "\n",
-    "View more, visit my tutorial page: https://morvanzhou.github.io/tutorials/\n",
+    "View more, visit my tutorial page: https://mofanpy.com/tutorials/\n",
     "My Youtube Channel: https://www.youtube.com/user/MorvanZhou\n",
     "\n",
     "Dependencies:\n",
