--- a/tutorial-contents-notebooks/305_batch_train.ipynb
+++ b/tutorial-contents-notebooks/305_batch_train.ipynb
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "torch_dataset = Data.TensorDataset(data_tensor=x, target_tensor=y)\n",
+    "torch_dataset = Data.TensorDataset(x, y)\n",
     "loader = Data.DataLoader(\n",
     "    dataset=torch_dataset,      # torch TensorDataset format\n",
     "    batch_size=BATCH_SIZE,      # mini batch size\n",
